--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^5.2.0-beta1",
     "bootstrap-icons": "^1.8.3",
     "esbuild": "^0.14.48",
+    "filepond": "^4.30.4",
     "sass": "^1.53.0"
   },
   "scripts": {
