--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap-icons": "^1.8.3",
     "esbuild": "^0.14.48",
     "filepond": "^4.30.4",
+    "filepond-plugin-file-validate-type": "^1.2.8",
     "sass": "^1.53.0"
   },
   "scripts": {
